# SYCL-USM_vs_Accessors_evaluation

./: .gitignore
exercises/03_scalar_add/: CMakeLists.txt
exercises/03_scalar_add/src/: scalar_add.cpp
exercises/04_handling_error/: CMakeLists.txt
exercises/04_handling_error/include/: include.hpp
exercises/04_handling_error/src/: handling_error.cpp  succoapera.cpp
exercises/06_vector_add/: CMakeLists.txt
exercises/06_vector_add/src/: vector_add.cpp
exercises/08_USM_vector_add/: CMakeLists.txt
exercises/08_USM_vector_add/include/: include.hpp
exercises/08_USM_vector_add/src/: usm_vector_add.cpp
exercises/09_synchronization/: CMakeLists.txt
exercises/09_synchronization/src/: synchronization.cpp
project/: CMakeLists.txt  launch.py
project/cmake/modules/: exec_helper.cmake
project/first/: CMakeLists.txt
project/first/include/: include.hpp
project/first/src/: firstTry.cpp
project/matrix_addition/: CMakeLists.txt
project/matrix_addition/qdreps/: acc_matrix_addition.qdrep  usm_matrix_addition.qdrep  usm_matrix_addition_shared.qdrep
project/matrix_addition/src/: acc_matrix_addition.cpp  matrix_addition.cpp  usm_matrix_addition.cpp  usm_matrix_addition_shared.cpp
project/matrix_multiplication/: CMakeLists.txt
project/matrix_multiplication/qdreps/: acc_matrix_multiplication.qdrep  usm_matrix_multiplication.qdrep
project/matrix_multiplication/src/: acc_matrix_multiplication.cpp  usm_matrix_multiplication.cpp
project/qdreps/: acc_stress_test.qdrep  usm_matrix_multiplication.qdrep  usm_stress_test.qdrep
project/results/: acc_data_dependency_test_v2.txt  acc_matrix_addition.txt  acc_matrix_multiplication.txt  usm_data_dependency_test_v2.txt  usm_matrix_addition.txt  usm_matrix_addition_shared.txt  usm_matrix_multiplication.txt
project/results/qdreps/: acc_data_dependency.qdrep  acc_matrix_addition.qdrep  acc_stress_test_v2.qdrep  usm_data_dependency.qdrep  usm_matrix_addition.qdrep  usm_matrix_addition_shared.qdrep  usm_stress_test_v2.qdrep
project/src/data_dependency_test/: CMakeLists.txt
project/src/data_dependency_test/src/: acc_data_dependency_test.cpp  acc_data_dependency_test_v2.cpp  usm_data_dependency_test.cpp  usm_data_dependency_test_v2.cpp
project/src/matrix_addition/: CMakeLists.txt
project/src/matrix_addition/src/: acc_matrix_addition.cpp  usm_matrix_addition.cpp  usm_matrix_addition_shared.cpp
project/src/matrix_multiplication/: CMakeLists.txt
project/src/matrix_multiplication/include/: include.hpp  matrix_utils.hpp
project/src/matrix_multiplication/src/: acc_matrix_multiplication.cpp  usm_matrix_multiplication.cpp
project/src/matrix_multiplication/src/utils/: matrix_utils.cpp
project/src/stress_test/: CMakeLists.txt
project/src/stress_test/include/: include.hpp
project/src/stress_test/src/: acc_stress_test.cpp  acc_stress_test_v2.cpp  usm_stress_test.cpp  usm_stress_test_v2.cpp
project/src/templates/: acc_template.cpp  usm_template.cpp
project/stress_test/: CMakeLists.txt
project/stress_test/qdreps/: acc_stress_test.qdrep
project/stress_test/src/: acc_stress_test.cpp  usm_stress_test.cpp
